--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     var timehours = document.getElementsByClassName("time");
 
-    var audio28 = document.getElementById('audio28');
+    var audio28 = document.getElementById("audio28");
     function playOrPaused28(){
         if(audio28.paused){
             audio28.play();
@@ -158,7 +158,7 @@
         timehours[4].innerHTML = checkTime1(secondDeg);
         timehours[5].innerHTML = "";
 
-        t = setTimeout('startTime()',500);
+        t = setTimeout("startTime()",500);
     }
 
     function stopCount() {
